<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@drawable/spacer_medium"
        android:showDividers="middle"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/frameworkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_framework_name" />

        <Button
            android:id="@+id/processBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_process_name" />

        <Button
            android:id="@+id/threadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_thread_name" />

        <Button
            android:id="@+id/componentsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_components_name" />

        <Button
            android:id="@+id/viewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_view_name" />

        <Button
            android:id="@+id/animationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_animation_name" />

        <Button
            android:id="@+id/storageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_storage_name" />

        <Button
            android:id="@+id/networkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_network_name" />

        <Button
            android:id="@+id/optimizationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_optimization_name" />

        <Button
            android:id="@+id/designModelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_design_model_name" />

        <Button
            android:id="@+id/jetPackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_jet_pack_name" />

        <Button
            android:id="@+id/toolsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main_tools_name" />

    </LinearLayout>
</ScrollView>